--- a/amp.html
+++ b/amp.html
@@ -1649,7 +1649,7 @@ amp-img {
       <div class="row my-2 phishingpolice">
           <div class="col-md-12">
             <div class="marquee-text" style="background-image: linear-gradient(To bottom,#F00,#F00);color:#000; padding: 5px 0; border: 1px solid var(--secondary-hover); border-radius: 5px;">
-              <div>NINJA388 > YOUR BEST BETTING PARTNER GAMPANG JACKPOT </div>
+              <div>PHISHINGPOLICE > YOUR BEST BETTING PARTNER GAMPANG JACKPOT </div>
             </div>
           </div>
         </div>
@@ -1764,12 +1764,12 @@ amp-img {
           <div class=container>
       <div class=row>
       <div class=col-md-12>
-        <h1><strong>phishingpolice: THE MOST TRUSTED AND BEST ONLINE GAME PARTNER FOR YOUR RICH GAMING EXPERIENCE</strong></h1>
-<p class="seo-text"><a href="https://bucksdocs.epicpxls.com/">Link phishingpolice</a> Ninja388 adalah agen resmi betting online yang sudah mendapatkan lisensi internasional PAGCOR dan sudah dipercaya oleh banyak member karena gampang memberikan profit.</p>
+        <h1><strong>PHISHINGPOLICE: THE MOST TRUSTED AND BEST ONLINE GAME PARTNER FOR YOUR RICH GAMING EXPERIENCE</strong></h1>
+<p class="seo-text"><a href="https://bucksdocs.epicpxls.com/">Link phishingpolice</a> Phishingpolice adalah agen resmi betting online yang sudah mendapatkan lisensi internasional PAGCOR dan sudah dipercaya oleh banyak member karena gampang memberikan profit.</p>
 
-<p class="seo-text"><strong>Ninja388 slot juga disukai karena gampang dimainkan dengan mudah dan gratis oleh semua orang tanpa batasan usia.  Slot indo gacor menjadi andalakan karena menyediakan berbagai macam jenis game judi online dari berbagai provider ternama seperti Pragmatic Play, PG Soft, Spade Gaming, Habanero, Slot88, Microgaming, Sbobet, Cmd365 dan masih banyak lagi.</strong></p>
+<p class="seo-text"><strong>Phishingpolice slot juga disukai karena gampang dimainkan dengan mudah dan gratis oleh semua orang tanpa batasan usia.  Slot indo gacor menjadi andalakan karena menyediakan berbagai macam jenis game judi online dari berbagai provider ternama seperti Pragmatic Play, PG Soft, Spade Gaming, Habanero, Slot88, Microgaming, Sbobet, Cmd365 dan masih banyak lagi.</strong></p>
 
-<p class="seo-text"><strong>Link Ninja388 memiliki ratusan permainan yang memungkinkan Anda bermain sesuai dengan keinginan masing-masing. Dari Slot hingga Casino, Anda akan menemukan permainan yang sesuai dengan kesukaan para bettor. Dengan demikian, Anda akan mendapatkan pengalaman bermain yang fantastis setiap saat. Ini adalah cara yang sempurna untuk meluangkan waktu secara aman dan efektif tanpa harus keluar rumah.</strong></p>
+<p class="seo-text"><strong>Link Phishingpolice memiliki ratusan permainan yang memungkinkan Anda bermain sesuai dengan keinginan masing-masing. Dari Slot hingga Casino, Anda akan menemukan permainan yang sesuai dengan kesukaan para bettor. Dengan demikian, Anda akan mendapatkan pengalaman bermain yang fantastis setiap saat. Ini adalah cara yang sempurna untuk meluangkan waktu secara aman dan efektif tanpa harus keluar rumah.</strong></p>
 
 
         <span class="style2"><br>
